fix overflow issues on pages

--- a/web/ui/src/features/layout/Page.module.css
+++ b/web/ui/src/features/layout/Page.module.css
@@ -16,6 +16,8 @@ div.page main {
   box-sizing: border-box;
   border: 1px solid #e4e5e6;
   border-radius: 3px;
+
+  overflow: auto;
 }
 
 .header {
